# elas

./: CMakeLists.txt  cmds.txt
src/: elas.cpp  elas.h  main.cpp
